<resources>
    <string name="app_name">Dental</string>
    <string name="splash_tagline">Your Smile, Our Priority</string>
    <string name="splash_loading">Loading...</string>
    <string name="appbar_scrolling_view_behavior">Dental Care</string>
    
    <!-- Login Screen Strings -->
    <string name="login_subtitle">Professional Dental Care Management</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="login_button">Login</string>
    <string name="login_footer">Secure login for dental professionals</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup_link">Don\'t have an account? Sign Up</string>
    
    <!-- Forgot Password Screen -->
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_desc">Enter your email address and we\'ll send you a link to reset your password</string>
    <string name="reset_password_button">Reset Password</string>
    <string name="back_to_login">Back to Login</string>
    
    <!-- Sign Up Screen -->
    <string name="signup_title">Create Account</string>
    <string name="signup_subtitle">Join our dental care community</string>
    <string name="name_hint">Enter your full name</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="signup_button">Sign Up</string>
    <string name="already_have_account">Already have an account? Login</string>
    
    <!-- Profile Screen -->
    <string name="profile_title">My Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="edit_picture">Edit Picture</string>
    <string name="full_name">Full Name</string>
    <string name="email_label">Email Address</string>
    <string name="phone_label">Phone Number</string>
    <string name="phone_hint">Enter phone number</string>
    <string name="dob_label">Date of Birth</string>
    <string name="dob_hint">DD/MM/YYYY</string>
    <string name="address_label">Address</string>
    <string name="address_hint">Enter your address</string>
    <string name="emergency_contact_button">Emergency Contact</string>
    <string name="save_button">Save Changes</string>
    
    <!-- Emergency Contact Screen -->
    <string name="emergency_contact_title">Emergency Contact</string>
    <string name="emergency_contact_desc">Add someone we can contact in case of emergency</string>
    <string name="contact_name">Contact Name *</string>
    <string name="contact_name_hint">Enter contact name</string>
    <string name="relationship_label">Relationship *</string>
    <string name="relationship_hint">e.g., Spouse, Parent, Sibling</string>
    <string name="email_label_optional">Email Address (Optional)</string>
</resources>