<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_background">

    <!-- Gradient overlay -->
    <View
        android:id="@+id/gradient_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_gradient" />

    <!-- Main container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="30dp">

        <!-- App Logo/Icon -->
        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="180dp"
            android:layout_height="80dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/dental_logo"
            android:scaleType="fitCenter" />

        <!-- App Name -->
        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="15dp"
            android:gravity="center" />

        <!-- Tagline -->
        <TextView
            android:id="@+id/tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_tagline"
            android:textSize="16sp"
            android:textColor="@color/splash_text_secondary"
            android:gravity="center"
            android:layout_marginBottom="50dp" />

    </LinearLayout>

    <!-- Loading indicator at bottom -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="30dp">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:layout_marginBottom="15dp" />

        <TextView
            android:id="@+id/loading_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_loading"
            android:textSize="14sp"
            android:textColor="@color/splash_text_secondary"
            android:gravity="center" />

    </LinearLayout>

</RelativeLayout>
